tests/negative/gold/uninitialized_field4_test.gold
tests/negative/uninitialized_field4_test.toit:8:3: error: Invalid name for declaration
  := ?
  ^~
tests/negative/uninitialized_field4_test.toit:8:6: error: Unexpected token: ?
  := ?
     ^
tests/negative/uninitialized_field4_test.toit:9:3: error: Invalid name for declaration
  / int ::= ?
  ^
tests/negative/uninitialized_field4_test.toit:9:9: error: Unexpected token: ::=
  / int ::= ?
        ^~~
tests/negative/uninitialized_field4_test.toit:9:13: error: Unexpected delimiter
  / int ::= ?
            ^
tests/negative/uninitialized_field4_test.toit:8:3: error: Missing body
  := ?
  ^~
Compilation failed.
